<resources>
    <string name="error_message">Error!</string>">
    <string name="app_name">Kotlin Calculator</string>
    <string name="clear">C</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="division">÷</string>
    <string name="multiply">×</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="my_git_hub">\@jeansofware1</string>
</resources>